# IHP

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .spiceinit  CHANGELOG.md  Makefile  README.md  metadata_guide.md  mkdocs-pdf.yml  pyproject.toml  zensical.toml
.changelog.d/: 105.added.md
.github/: CODEOWNERS  write_cells.py
.github/workflows/: deploy-s3.yml  pages.yml  release.yml  test_code.yml
cni/: grouping.py  sg13_tech.py  sg13g2_tech.json
docs/: _config.yml  index.md  palace_demo_cpw.ipynb  palace_demo_microstrip.ipynb  tech.rst  zensical.toml
docs/_static/: extra.js
docs/_static/3d/: viewer.html
examples/design_examples/spice_and_gds_to_yml/: spice_and_gds_to_pic_yml.py
examples/design_examples/spice_and_gds_to_yml/TO_Apr2025/: Mixer5GHz.pic.yml
ihp/: __init__.py  layers.yaml  tech.py
ihp-gdsfactory--sample-projects/ihp--public--project/: README.md  pyproject.toml
ihp-gdsfactory--sample-projects/ihp--public--project/.github/: write_cells.py
ihp-gdsfactory--sample-projects/ihp--public--project/ihp/: tech.py
ihp-gdsfactory--sample-projects/ihp--public--project/ihp/cells/: bipolar.py  bondpads.py  capacitors.py  containers.py  fixed.py  inductors.py  passives.py  resistors.py  transistors.py  via_stacks.py
ihp-gdsfactory--sample-projects/ihp--public--project/ihp/klayout/tech/: layers.lyp
ihp-gdsfactory--sample-projects/ihp--public--project/ihp/samples/: all_cells.py
ihp-gdsfactory--sample-projects/ihp--public--project/tests/: test_cells.py
ihp/cells/: __init__.py  antennas.py  bipolar.py  bjt_transistors.py  bondpads.py  capacitors.py  containers.py  fet_transistors.py  fixed.py  inductors.py  passives.py  primitives.py  resistors.py  rf_transistors.py  text.py  transistors.py  via_stacks.py  waveguides.py
ihp/cells2/: antennas.py  bjt_transistors.py  bondpads.py  capacitors.py  containers.py  fixed.py  inductors.py  mos_transistors.py  passives.py  resistors.py  text.py  via_stacks.py  waveguides.py
ihp/cells_fixed/: __init__.py
ihp/klayout/tech/: layers.lyp
ihp/klayout/tech/drc/: README.md  run_drc.py
ihp/models/: __init__.py  generic.py  media.py  waveguides.py
ihp/models/ngspice/models/: capacitors_mod.lib  capacitors_mod_mismatch.lib  capacitors_stat.lib  cornerCAP.lib  cornerDIO.lib  cornerHBT.lib  diodes.lib  resistors_mod.lib  resistors_mod_mismatch.lib  resistors_stat.lib  sg13g2_bondpad.lib  sg13g2_dschottky_nbl1_mod.lib  (+10 more)
ihp/models/sax/: __init__.py  capacitors.py  constants.py  inductors.py  resistors.py
ihp/samples/: all_cells2.py  sample_to_3d.py  sample_to_3d_electrical.py
tests/: test_cells.py  test_sax_models.py  test_sizing.py
tests/gds_ref/: bend_euler.gds  branch_line_coupler.gds  cmim.gds  rfcmim.gds  sealring.gds  straight_metal.gds  text_rectangular.gds  text_rectangular_multi_layer.gds  tline1.gds
tests/test_cells/: test_settings_SVaricap_fixed_.yml  test_settings_add_pads_top_.yml  test_settings_bend_euler_.yml  test_settings_bend_metal_.yml  test_settings_bend_s_.yml  test_settings_bend_s_metal_.yml  test_settings_bondpad_.yml  test_settings_bondpad_array_.yml  test_settings_bondpad_fixed_.yml  test_settings_branch_line_coupler_.yml  test_settings_cmim_.yml  test_settings_cmim_fixed_.yml  test_settings_cmom_.yml  test_settings_dantenna_.yml  test_settings_dantenna_fixed_.yml  test_settings_diodevdd_2kv_fixed_.yml  test_settings_diodevdd_4kv_fixed_.yml  test_settings_diodevss_2kv_fixed_.yml  test_settings_diodevss_4kv_fixed_.yml  test_settings_dpantenna_.yml  test_settings_dpantenna_fixed_.yml  test_settings_dummy1_fixed_.yml  test_settings_esd_nmos_.yml  test_settings_inductor2_.yml  test_settings_inductor3_.yml  test_settings_isolbox_fixed_.yml  test_settings_nmosHV_fixed_.yml  test_settings_nmos_.yml  test_settings_nmos_fixed_.yml  test_settings_nmos_hv_.yml  test_settings_nmoscl_2_fixed_.yml  test_settings_nmoscl_4_fixed_.yml  test_settings_npn13G2L_.yml  test_settings_npn13G2L_fixed_.yml  test_settings_npn13G2V_.yml  test_settings_npn13G2V_fixed_.yml  test_settings_npn13G2_.yml  test_settings_npn13G2_fixed_.yml  test_settings_ntap1_.yml  test_settings_ntap1_fixed_.yml  (+35 more)
(+59 files in other folders)
